@startuml

class Inventory {
    - Id: int
    - ItemId: string
    - Description: string
    - ItemReference: string
    - Locations: List<int>
    - TotalOnHand: int
    - TotalExpected: int
    - TotalOrdered: int
    - TotalAllocated: int
    - TotalAvailable: int
    - CreatedAt: DateTime
    - UpdatedAt: DateTime
}

class Contact {
    - Id: int
    - Name: string
    - Phone: string
    - Email: string
}

class ItemGroup {
    - Id: int
    - Name: string
    - Description: string
    - CreatedAt: DateTime
    - UpdatedAt: DateTime
}

class ItemLine {
    - Id: int
    - Name: string
    - Description: string
    - CreatedAt: DateTime
    - UpdatedAt: DateTime
}

class ItemType {
    - Id: int
    - Name: string
    - Description: string
    - CreatedAt: DateTime
    - UpdatedAt: DateTime
}

class Supplier {
    - Id: int
    - Code: string
    - Name: string
    - Address: string
    - AddressExtra: string
    - City: string
    - ZipCode: string
    - Province: string
    - Country: string
    - ContactName: string
    - Phonenumber: string
    - Reference: string
    - CreatedAt: DateTime
    - UpdatedAt: DateTime
}

class Warehouse {
    - Id: int
    - Code: string
    - Name: string
    - Address: string
    - Zip: string
    - City: string
    - Province: string
    - Country: string
    - Contact: Contact
    - CreatedAt: DateTime
    - UpdatedAt: DateTime
    - Locations: List<Locations>
}

class Locations {
    - Id: int
    - WarehouseId: int
    - Code: string
    - Name: string
    - CreatedAt: DateTime
    - UpdatedAt: DateTime
}

class Orders {
    - Id: int
    - SourceId: int
    - OrderDate: DateTime
    - RequestDate: DateTime
    - Reference: string
    - ReferenceExtra: string
    - OrderStatus: string
    - Notes: string
    - ShippingNotes: string
    - PickingNotes: string
    - WarehouseId: int
    - ShipTo: int?
    - BillTo: int?
    - ShipmentId: int
    - TotalAmount: decimal
    - TotalDiscount: decimal
    - TotalTax: decimal
    - TotalSurcharge: decimal
    - CreatedAt: DateTime
    - UpdatedAt: DateTime
    - Items: List<OrdersItem>
}

class OrdersItem {
    - OrderId: int
    - Uid: string
    - Code: string
    - Description: string
    - ShortDescription: string
    - UpcCode: string
    - ModelNumber: string
    - CommodityCode: string
    - ItemLine: int
    - ItemGroup: int
}

class Shipment {
    - Id: int
    - OrderId: int
    - SourceId: int
    - OrderDate: DateOnly
    - RequestDate: DateOnly
    - ShipmentDate: DateOnly
    - ShipmentType: string
    - ShipmentStatus: string
    - Notes: string
    - CarrierCode: string
    - CarrierDescription: string
    - ServiceCode: string
    - PaymentType: string
    - TransferMode: string
    - TotalPackageCount: int
    - TotalPackageWeight: float
    - CreatedAt: DateTime
    - UpdatedAt: DateTime
    - Items: List<ShipmentsItem>
}

class ShipmentsItem {
    - ShippingId: int
    - ItemId: string
    - Amount: int
}

class TransfersItem {
    - TransferId: int
    - ItemId: string
    - Amount: int
}

class Transfer {
    - Id: int
    - Reference: string
    - TransferFrom: int?
    - TransferTo: int
    - TransferStatus: string
    - CreatedAt: DateTime
    - UpdatedAt: DateTime
    - Items: List<TransfersItem>
}

class EndpointAccess {
    - Id: int
    - Endpoint: string?
    - CanGet: bool
    - CanPost: bool
    - CanPut: bool
    - CanDelete: bool
    - UserId: int
    - User: User
}

class User {
    - Id: int
    - ApiKey: string
    - AppName: string
    - HasFullAccess: bool
    - EndpointAccesses: List<EndpointAccess>
}

class Client {
    - Id: int
    - Name: string
    - Address: string
    - City: string
    - Zip: string
    - Province: string
    - Country: string
    - ContactName: string
    - ContactPhone: string
    - ContactEmail: string
    - CreatedAt: DateTime
    - UpdatedAt: DateTime
}

class Item {
    - Uid: string
    - Code: string
    - Description: string
    - ShortDescription: string
    - UpcCode: string
    - ModelNumber: string
    - CommodityCode: string
    - ItemLine: int?
    - ItemGroup: int?
    - ItemType: int?
    - UnitPurchaseQuantity: int
    - UnitOrderQuantity: int
    - PackOrderQuantity: int
    - SupplierId: int?
    - SupplierCode: string
    - SupplierPartNumber: string
    - CreatedAt: DateTime
    - UpdatedAt: DateTime
}

Warehouse -- Locations
Warehouse --> Orders
Warehouse --> Transfer
Orders -- OrdersItem
Shipment -- ShipmentsItem
Orders -- Shipment
Transfer -- TransfersItem
EndpointAccess --> User
ItemLine --> Item
ItemGroup --> Item
ItemType --> Item
Supplier --> Item
Item --> OrdersItem
Item --> TransfersItem
Item --> ShipmentsItem
Inventory <-- Locations
Inventory <-- Item
Contact -- Client
Contact --> Supplier
Contact --> Warehouse
Client --> Orders
Client --> Warehouse
Client --> Supplier


@enduml